--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,8 +2,8 @@ pipeline {
     agent any
 
     environment {
-        SERVER_IP    = '13.53.70.69'
-        SSH_CRED_ID  = 'node-app-key'
+        SERVER_IP    = '13.203.208.180'
+        SSH_CRED_ID  = 'Pull-Key'
         TOMCAT_PATH  = '/var/lib/tomcat10/webapps'
         TOMCAT_SVC   = 'tomcat10'
     }
@@ -11,7 +11,7 @@ pipeline {
     stages {
         stage('Checkout') {
             steps {
-                git branch: 'master', url: 'https://github.com/iamtruptimane/student-app.git'
+                git branch: 'main', url: 'https://github.com/Adiii-AJ/Student_App_Page.git'
             }
         }
 
