--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
     stages {
         stage('Checkout') {
             steps {
-                git branch: 'main', url: 'https://github.com/Adiii-AJ/Student_App_Page.git'
+                git branch: 'main', url: 'https://github.com/iam-ganeshjadhav/Student-Registration-java-form-using-jenkins-maven.git'
             }
         }
 
@@ -41,7 +41,7 @@ pipeline {
 
     post {
         success {
-            echo "App deployed! Visit: http://${SERVER_IP}:8080/"
+            echo "App deployed! Visit: http:///"
         }
         failure {
             echo "Deployment failed."
